# city-bike-app

./: .gitignore  .pylintrc  README.md  fly.toml  pyproject.toml  requirements.txt  schema.sql  tasks.py
.github/workflows/: main.yml
src/: __init__.py  app.py  app_factory.py  config.py  database_builder.py  index.py
src/entities/: journey.py  station.py
src/models/: journey.py  station.py
src/repositories/: database.py  general_database_repository.py  journey_repository.py  station_repository.py
src/routes/: routes.py
src/services/: journey_service.py  station_service.py
src/tests/: app_test.py  conftest.py  database_builder_test.py
src/tests/data/: invalid_and_duplicate_journeys_test.csv  invalid_and_duplicate_stations_test.csv  invalid_journeys_test.csv  invalid_stations_test.csv  journey_test.csv  journey_test_large.csv  station_test.csv  station_test_large.csv
src/tests/repositories/: general_database_repository_test.py  journey_repository_test.py  station_repository_test.py
src/tests/services/: journey_service_test.py  station_service_test.py
